[gd_scene format=3 uid="uid://boemvnn6pmtj4"]

[ext_resource type="Script" uid="uid://c702wigehqpsm" path="res://towers/aoe_tower.gd" id="1_25spg"]
[ext_resource type="Texture2D" uid="uid://b0ixmgw2b8g72" path="res://game jam 1 art/attack drill VFX.png" id="2_3yk1a"]
[ext_resource type="Texture2D" uid="uid://woaxf0uc7x77" path="res://game jam 1 art/Drill Sheet.png" id="3_vf0yv"]
[ext_resource type="Script" uid="uid://b752caw6yueob" path="res://range checker.gd" id="4_3s7gn"]
[ext_resource type="Texture2D" uid="uid://xv0b47p0u33k" path="res://game jam 1 art/range.png" id="5_ncv67"]
[ext_resource type="Texture2D" uid="uid://csu5hyq3itnvg" path="res://game jam 1 art/visual effect icons.png" id="6_gkyhl"]
[ext_resource type="Script" uid="uid://dfqwun7kvsgfx" path="res://towers/place_holder.gd" id="7_3yk1a"]
[ext_resource type="FontFile" uid="uid://dde6ilyio5ob" path="res://game jam 1 art/upheavtt.ttf" id="8_vf0yv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_43hxt"]
radius = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_25spg"]
atlas = ExtResource("3_vf0yv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yk1a"]
atlas = ExtResource("3_vf0yv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf0yv"]
atlas = ExtResource("3_vf0yv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s7gn"]
atlas = ExtResource("3_vf0yv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ncv67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25spg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yk1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf0yv")
}],
"loop": true,
"name": &"attacking",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s7gn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gkyhl"]
atlas = ExtResource("3_vf0yv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmfic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkyhl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plmv0"]
size = Vector2(26, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_uraqg"]
atlas = ExtResource("6_gkyhl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buywi"]
atlas = ExtResource("6_gkyhl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lr6km"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uraqg")
}],
"loop": true,
"name": &"both",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buywi")
}],
"loop": true,
"name": &"winter effect",
"speed": 5.0
}]

[node name="aoe tower" type="StaticBody2D" unique_id=1135499846]
collision_layer = 2
script = ExtResource("1_25spg")

[node name="attack area" type="Area2D" parent="." unique_id=1683653502]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack area" unique_id=2115485854]
shape = SubResource("CircleShape2D_43hxt")

[node name="attack VFX" type="Sprite2D" parent="attack area/CollisionShape2D" unique_id=2038655863]
modulate = Color(1, 1, 1, 0.61960787)
position = Vector2(3.1888485e-06, 9.536743e-07)
scale = Vector2(1.53125, 1.5312501)
texture = ExtResource("2_3yk1a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=873115296]
sprite_frames = SubResource("SpriteFrames_ncv67")
animation = &"idle"
frame_progress = 0.33027416

[node name="frozen x-vfx" type="AnimatedSprite2D" parent="." unique_id=106686772]
visible = false
sprite_frames = SubResource("SpriteFrames_pmfic")
autoplay = "default"

[node name="detection area" type="Area2D" parent="." unique_id=751731492]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection area" unique_id=1636623106]
shape = SubResource("CircleShape2D_43hxt")
script = ExtResource("4_3s7gn")

[node name="Sprite2D" type="Sprite2D" parent="detection area/CollisionShape2D" unique_id=473187653]
modulate = Color(1, 1, 1, 0.7058824)
position = Vector2(-1.847744e-06, -4.7683716e-07)
scale = Vector2(1.53125, 1.5312499)
texture = ExtResource("5_ncv67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1597202262]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_plmv0")

[node name="icons" type="AnimatedSprite2D" parent="." unique_id=1555632823]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_lr6km")
animation = &"both"

[node name="icons2" type="AnimatedSprite2D" parent="." unique_id=396789968]
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_lr6km")
animation = &"both"

[node name="Timer" type="Timer" parent="." unique_id=737882863]
wait_time = 2.0
autostart = true

[node name="place holder" type="Sprite2D" parent="." unique_id=569074219]
visible = false
position = Vector2(-12, -11)
script = ExtResource("7_3yk1a")

[node name="Button" type="Button" parent="place holder" unique_id=2004560043]
self_modulate = Color(0.99999994, 0.11322755, 0.16187015, 1)
offset_right = 23.636364
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("8_vf0yv")
theme_override_font_sizes/font_size = 10
text = "25$"

[connection signal="body_shape_entered" from="attack area" to="." method="_on_attack_area_body_shape_entered"]
[connection signal="body_shape_entered" from="detection area" to="." method="_on_detection_area_body_shape_entered"]
[connection signal="body_shape_exited" from="detection area" to="." method="_on_detection_area_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="place holder/Button" to="." method="_on_button_pressed"]
